<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:textColor="@color/toolbar_title_color"
        android:text="@string/start_time"/>
    <Button
        android:id="@+id/btn_Time"
        android:layout_margin="10dp"
        android:text="@string/picker_time"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <Button
        android:id="@+id/btn_Options"
        android:layout_margin="10dp"
        android:text="@string/picker_province"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:textColor="@color/toolbar_title_color"
        android:text="@string/end_time"/>
    <Button
        android:id="@+id/btn_CustomTime"
        android:layout_margin="10dp"
        android:text="@string/picker_custom_time"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <Button
        android:id="@+id/btn_CustomOptions"
        android:layout_margin="10dp"
        android:text="@string/picker_custom_province"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <Button
        android:id="@+id/btn_no_linkage"
        android:layout_margin="10dp"
        android:text="条件选择器(不联动)"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <Button
        android:id="@+id/btn_GotoJsonData"
        android:layout_margin="10dp"
        android:text="省市区Json文件解析示例"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_register"
        android:gravity="center"
        android:text="@string/search"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_large"/>
</LinearLayout>
