<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_auth_device"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    android:orientation="vertical"
    tools:context="com.anyihao.ayb.frame.activity.AddAuthDeviceActivity">

    <include layout="@layout/toolbar_common"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="left|center_vertical"
            android:text="@string/mac_address"
            android:textColor="@color/user_account_color"
            android:textSize="@dimen/font_size_normal_high"/>

        <com.chaychan.viewlib.PowerfulEditText
            android:id="@+id/et_mac_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:drawableRight="@drawable/edit_text_selector"
            android:gravity="left|center_vertical"
            android:hint="@string/mac_address_hint"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="@color/light_gray"
            android:textCursorDrawable="@drawable/edittext_cursor_color"
            android:textSize="@dimen/font_size_normal_high"
            app:funcType="canClear"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:gravity="right|center_vertical"
        android:paddingRight="12dp"
        android:text="@string/questions"
        android:textColor="@color/light_gray"
        android:textSize="@dimen/font_size_small"/>

    <RadioGroup
        android:id="@+id/rg_device_type"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginTop="34dp"
        android:gravity="left|center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="26dp"
        android:paddingRight="26dp">

        <RadioButton
            android:id="@+id/rbt_phone"
            style="@style/add_auth_radio_button_style"
            android:text="@string/mobile"/>

        <RadioButton
            android:id="@+id/rbt_pad"
            style="@style/add_auth_radio_button_style"
            android:text="@string/pad"/>

        <RadioButton
            android:id="@+id/rbt_pc"
            style="@style/add_auth_radio_button_style"
            android:text="@string/computer"/>

        <RadioButton
            android:id="@+id/rbt_other"
            style="@style/add_auth_radio_button_style"
            android:text="@string/others"/>
    </RadioGroup>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_add_auth_device"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="37dp"
        android:background="@drawable/btn_register"
        android:gravity="center"
        android:text="@string/add_auth_device"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_sev"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:gravity="left|center_vertical"
        android:maxLines="2"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:text="@string/introduction"
        android:textColor="@color/light_gray"
        android:textSize="@dimen/font_size_small"/>

</LinearLayout>
