<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.anyihao.ayb.frame.activity.MacInstructionActivity">

    <include layout="@layout/toolbar_common"/>

    <TextView
        android:id="@+id/tv_question0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="22dp"
        android:gravity="left|center_vertical"
        android:text="@string/question_zero"
        android:textColor="@color/user_account_color"
        android:textSize="@dimen/font_size_normal_high"/>

    <TextView
        android:id="@+id/tv_answer0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="12dp"
        android:gravity="left"
        android:text="@string/answer_zero"
        android:textColor="@color/toolbar_title_color"
        android:textSize="@dimen/font_size_normal"/>

    <TextView
        android:id="@+id/tv_question1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:gravity="left|center_vertical"
        android:text="@string/question_one"
        android:textColor="@color/user_account_color"
        android:textSize="@dimen/font_size_normal_high"/>

    <TextView
        android:id="@+id/tv_answer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="12dp"
        android:gravity="left"
        android:text="@string/answer_one"
        android:textColor="@color/pay_title_text_color"
        android:textSize="@dimen/font_size_normal"/>

    <TextView
        android:id="@+id/tv_question2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:gravity="left|center_vertical"
        android:text="@string/question_two"
        android:textColor="@color/user_account_color"
        android:textSize="@dimen/font_size_normal_high"/>

    <TextView
        android:id="@+id/tv_answer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="12dp"
        android:gravity="left|center_vertical"
        android:text="@string/answer_two"
        android:textColor="@color/pay_title_text_color"
        android:textSize="@dimen/font_size_normal"/>
</LinearLayout>
