<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/shape_dialog"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/menu_hint"
        android:maxLines="2"
        android:textColor="@color/light_gray"
        android:textSize="@dimen/font_size_thi"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:background="@color/line_color"/>

    <TextView
        android:id="@+id/tv_say_hi"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/say_hi"
        android:textColor="@color/toolbar_title_color"
        android:textSize="@dimen/font_size_sev"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:background="@color/line_color"/>

    <TextView
        android:id="@+id/tv_bribery_money"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/bribery_money"
        android:textColor="@color/payment_fee_text_color"
        android:textSize="@dimen/font_size_sev"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:background="@color/line_color"/>

    <TextView
        android:id="@+id/tv_cancle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/user_account_color"
        android:textSize="@dimen/font_size_sev"/>
</LinearLayout>