<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="305dp"
              android:layout_height="497dp"
              android:layout_gravity="center"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tv_envelope_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="100M"
        android:textColor="#F62B2B"
        android:textSize="50sp"/>

    <TextView
        android:id="@+id/tv_use_expires"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:text="@string/use_expires"
        android:textColor="#D20505"
        android:textSize="@dimen/font_size_thi"/>

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="11dp"
        android:scaleType="centerCrop"
        android:src="@drawable/user_profile"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/fried_name"
        android:textColor="@color/white"
        android:textSize="19sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/already_saved"
        android:textColor="#FEAFAF"
        android:textSize="@dimen/font_size_normal"/>

    <TextView
        android:id="@+id/btn_go_to_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:drawablePadding="10dp"
        android:drawableRight="@drawable/ic_right"
        android:gravity="center"
        android:text="@string/go_to_account"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_sev"/>
</LinearLayout>